# TryNiceGUI

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: github-pages.yml  pre-commit.yaml  test.yaml
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/TryNiceGUI/: __init__.py  __main__.py  cli.py  home_page.py  main.py  menu.py  theme.py
src/TryNiceGUI/pages/: delay_creation.py  with_router.py
tests/: test_cli.py  test_main.py
